--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,33 +1,23 @@
 {
   "compilerOptions": {
-    "target": "ES2022",
+    "target": "ES2020",
     "module": "ESNext",
-    "lib": ["ES2022", "DOM"],
     "moduleResolution": "Node",
+    "rootDir": "src",
+    "outDir": "dist",
+    "strict": true,
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
-    "strict": true,
     "skipLibCheck": true,
-    "noImplicitAny": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
     "resolveJsonModule": true,
-    "isolatedModules": true,
-    "baseUrl": ".",
-    "paths": {
-      "@backend/*": ["backend/src/*"],
-      "@frontend/*": ["frontend/src/*"]
-    },
-    "sourceMap": true,
-    "outDir": "./dist"
+    "allowSyntheticDefaultImports": true,
+    "noImplicitAny": false,
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
+    "strictPropertyInitialization": false,
+    "types": ["node"],
+    "typeRoots": ["./src/types", "./node_modules/@types"],
   },
-  "include": [
-    "backend/src/**/*",
-    "frontend/src/**/*"
-  ],
-  "exclude": [
-    "node_modules",
-    "dist",
-    "backend/src/db/postgres/prisma"
-  ]
+  "include": ["src/**/*.ts"],
+  "exclude": ["node_modules", "dist"]
 }
